--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,56 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  border: solid black;
+}
+
+.container {
+  width: 350px;
+}
+
+.display {
+  width: 100%;
+  border: none;
+  direction: rtl;
+  padding: 10px 3px;
+  background: gray;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+button {
+  padding: 12px 0;
+  border: 1px solid rgb(212, 211, 211);
+}
+
+button:nth-child(4),
+button:nth-child(8),
+button:nth-child(12),
+button:nth-child(16),
+button:nth-child(19) {
+  background: orange;
+}
+
+button:nth-child(17) {
+  grid-column: 1 / 3;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.buttons-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
